# greycrypt

./: .gitignore  Cargo.toml  README.md  br  config.sample.toml  mapping.toml  rn
shtool/: br.sh  relbuild.sh  rex.sh  rt.sh  rtrep.sh  setup.sh  tb.sh
src/: LICENSE  commands.rs  config.rs  core.rs  crypto_util.rs  logging.rs  main.rs  mapping.rs  process_mutex.rs  syncdb.rs  syncfile.rs  testlib.rs  trash.rs  util.rs
testdata/: test_config.toml  test_text_file.txt
