[package]
name = "grey_crypt"
version = "0.0.1"
authors = [ "John Quigley <jmquigs@gmail.com>" ]

[dependencies]
toml = "0.1"
uuid = "0.1"
#rust-crypto = "0.2.31"
rand = "0.3.8"
rustc-serialize = "0.3"
getopts = "0.2"
glob = "*"
winapi = "0.1.20"
rpassword = "0.0.5"
log = "0.3.1"

clippy = "*"
nix = "*"

# until this is fixed, use this branch: 
# https://github.com/DaGenix/rust-crypto/issues/305
[dependencies.rust-crypto]
git = "https://github.com/andreasots/rust-crypto.git"
branch = "volatile-asm"

#[dependencies.clippy]
#git = "https://github.com/Manishearth/rust-clippy"

[features]
release_paths = []
